tests/ui/pattern/pat-type-err-formal-param.stderr
error[E0308]: mismatched types
  --> $DIR/pat-type-err-formal-param.rs:8:8
   |
LL | fn foo(Tuple(_): String) {}
   |        ^^^^^^^^  ------ expected due to this
   |        |
   |        expected `String`, found `Tuple`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
